#14 게시물 cud 시퀀스 확인 이미지 테이블에서 삭제가 안됨. 사용자가 입력을 안하고 싶어서 지웠는데 빈문자열로 판단했을 때 이전 로그로 백업하는 이슈 fileStore에서 없는 파일 삭제 시도할 떄 illegalArgEx 던지는데 커스텀 해야함. 태그 고려 안함

--- a/src/main/resources/templates/post_update_form.html
+++ b/src/main/resources/templates/post_update_form.html
@@ -13,7 +13,10 @@
 
     <h4 class="mb-3">상품 입력</h4>
 
-    <form th:action="@{/post/update/{identity} (identity=${post.id})}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/post/update}" method="post" enctype="multipart/form-data">
+
+        <input type="text" name="prevContent" th:value="${post.content} " th:hidden="true">
+        <input type="text" name="postId" th:value="${post.id} " th:hidden="true">
         <div class="mb-3">
             <label for="content" class="form-label">내용</label>
             <input type="text" class="form-control" id="content" name="postContent" th:placeholder="${post.content}">
