--- a/src/main/resources/templates/post_result.html
+++ b/src/main/resources/templates/post_result.html
@@ -15,6 +15,19 @@
     <span>author : </span><span th:text="*{author}"></span><br/>
 </div>
 
+
+<!--댓글 입력 -->
+<div class="input-group mb-3">
+    <form id="comment" th:action="@{/post/{identity}/comment (identity=${post.id})}" method="post" >
+        <input type="text" name="content" class="form-control" placeholder="댓글을 입력해주세요.." >
+        <input type="text" name="commenter" class="form-control" placeholder="너의 이름은?" >
+        <input type="text" name="id" th:value="${post.id}" th:hidden="true">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="submit">등록</button>
+        </div>
+    </form>
+</div>
+
 <!--<a role="button" th:href="@{/posts/update/{identity} (identity=${post.id})}" class="btn btn-primary">글 수정</a>-->
 <!--<a role="button" th:href="@{/}" class="btn btn-primary">메인으로</a>-->
 <!--<form th:action="@{/posts/{identity} (identity=${post.id})}" method="post">-->
