#15 게시글 수정시  파일 수정을 불가하게 만듦 이유는 인스타에서는 이미지 수정이 안됨

--- a/src/main/resources/templates/post_update_form.html
+++ b/src/main/resources/templates/post_update_form.html
@@ -27,7 +27,7 @@
         </div>
         <div class="mb-3">
             <label for="imageFiles" class="form-label">upload files</label>
-            <input id="imageFiles" type="file" multiple="multiple" name="imageFiles">
+            <input id="imageFiles" type="file" multiple="multiple" name="imageFiles" th:value="${post.images}" th:hidden="true">
         </div>
         <div class="col-12">
             <a href="/" role="button" class="btn btn-secondary">수정 취소</a>
