--- a/src/main/resources/templates/post_result.html
+++ b/src/main/resources/templates/post_result.html
@@ -18,7 +18,7 @@
 
 <!--댓글 입력 -->
 <div class="input-group mb-3">
-    <form id="comment" th:action="@{/post/{identity}/comment (identity=${post.id})}" method="post" >
+    <form id="comment" th:action="@{/post/{identity}/save-comment (identity=${post.id})}" method="post" >
         <input type="text" name="content" class="form-control" placeholder="댓글을 입력해주세요.." >
         <input type="text" name="commenter" class="form-control" placeholder="너의 이름은?" >
         <input type="text" name="id" th:value="${post.id}" th:hidden="true">
@@ -28,15 +28,6 @@
     </form>
 </div>
 
-<!--<a role="button" th:href="@{/posts/update/{identity} (identity=${post.id})}" class="btn btn-primary">글 수정</a>-->
-<!--<a role="button" th:href="@{/}" class="btn btn-primary">메인으로</a>-->
-<!--<form th:action="@{/posts/{identity} (identity=${post.id})}" method="post">-->
-<!--    <input type="hidden" name="_method" value="delete"/>-->
-<!--    <button id="delete-btn">삭제</button>-->
-<!--</form>-->
-
-
-<!--<script th:src="@{/js/app/index.js}"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
