--- a/src/main/resources/templates/post_update_form.html
+++ b/src/main/resources/templates/post_update_form.html
@@ -18,17 +18,10 @@
         <input type="text" name="prevContent" th:value="${post.content} " th:hidden="true">
         <input type="text" name="postId" th:value="${post.id} " th:hidden="true">
         <input type="text" name="author" th:value="${post.author}" th:hidden="true">
+        <input type="text" name="numOfPostHashTag" th:value="${post.numOfPostHashTag}" th:hidden="true">
         <div class="mb-3">
             <label for="content" class="form-label">내용</label>
             <input type="text" class="form-control" id="content" name="postContent" th:placeholder="${post.content}">
-        </div>
-        <div class="mb-3">
-            <label for="author" class="form-label">작성자</label>
-            <textarea type="text" class="form-control" id="author" name="author" th:placeholder="${post.author}" readonly></textarea>
-        </div>
-        <div class="mb-3">
-            <label for="imageFiles" class="form-label">upload files</label>
-            <input id="imageFiles" type="file" multiple="multiple" name="imageFiles" th:value="${post.images}" th:hidden="true">
         </div>
         <div class="col-12">
             <a href="/" role="button" class="btn btn-secondary">수정 취소</a>
