--- a/src/main/resources/templates/post_form.html
+++ b/src/main/resources/templates/post_form.html
@@ -2,27 +2,58 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/post/">snsX</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/post/upload}">게시글 작성하기</a>
+                </li>
+            </ul>
+            <form class="d-flex" th:action="@{/post/search}">
+                <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="btn btn-outline-success" type="submit">Search</input>
+            </form>
+        </div>
+    </div>
+</nav>
 <div class="container">
-
     <div class="py-5 text-center">
         <h2>상품 등록 폼</h2>
     </div>
-
     <h4 class="mb-3">상품 입력</h4>
 
     <form th:action="@{/post/upload}" method="post" enctype="multipart/form-data">
-        <ul>
-            <li>작가 <input type="text" name="author"></li>
-            <li>글 <input type="text" name="content"></li>
-            <li>이미지 파일들<input type="file" multiple="multiple"
-                              name="imageFiles" ></li>
-        </ul>
-        <input type="submit"/>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">@</span>
+            <input type="text" class="form-control" placeholder="Username" aria-label="Username" name="author" aria-describedby="basic-addon1">
+        </div>
+        <div class="input-group">
+            <span class="input-group-text">content</span>
+            <textarea class="form-control" aria-label="With textarea" name="content"></textarea>
+        </div>
+        <br/>
+        <div class="input-group mb-3">
+            <span class="input-group-text">images</span>
+            <input type="file"  multiple="multiple" name="imageFiles" class="btn btn-primary">
+        </div>
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="submit">등록</button>
+        </div>
     </form>
-
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
