#17 댓글 조회 및 삭제 컴포넌트 추가 완료, 수정 페이지 약간 수정함.

--- a/src/main/resources/templates/post_result.html
+++ b/src/main/resources/templates/post_result.html
@@ -10,7 +10,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="/post/">snsX</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -21,34 +22,45 @@
             </ul>
             <form class="d-flex" th:action="@{/post/search}">
                 <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <input class="btn btn-outline-success" type="submit">Search</input>
+                <input class="btn btn-outline-success" type="submit"th:value="Search"/>
             </form>
         </div>
     </div>
 </nav>
 <div class="container" th:object="${post}">
-        <div class="card py-5" style="width: 25rem;">
-            <img class="rounded card-img-top" th:each="imageFile : ${post.images}" th:src="|/post/images/${imageFile}|" width="300" height="300"/>
-            <div class="card card-body" style="width: 25rem;">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">[[*{content}]]</li>
-                    </ul>
-                <div class="card-footer">
-                    <p class="card-text">@ [[*{author}]]</p>
-                </div>
+    <div class="card py-5" style="width: 25rem;">
+        <img class="rounded card-img-top" th:each="imageFile : ${post.images}" th:src="|/post/images/${imageFile}|"
+             width="300" height="300"/>
+        <div class="card card-body" style="width: 25rem;">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">[[*{content}]]</li>
+            </ul>
+            <div class="card-footer">
+                <p class="card-text">@ [[*{author}]]</p>
             </div>
         </div>
+    </div>
+
+    <div class="col-12 input-group-append">
+        <a role="button" th:href="@{/post/update/{identity} (identity=${post.id})}" class="btn btn-primary">글 수정</a>
+        <form th:action="@{/post/delete}" method="post">
+            <input type="text" name="postId" th:value="${post.id}" th:hidden="true"/>
+            <button class="btn btn-primary" id="delete-btn">삭제</button>
+        </form>
+    </div>
 </div>
 
 <div class="container">
-    <form id="comment" th:action="@{/post/{identity}/save-comment (identity=${post.id})}" method="post" >
+    <form id="comment" th:action="@{/post/{identity}/save-comment (identity=${post.id})}" method="post">
         <div class="input-group mb-3">
             <span class="input-group-text" id="basic-addon1">@</span>
-            <input type="text" name="commenter" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+            <input type="text" name="commenter" class="form-control" placeholder="Username" aria-label="Username"
+                   aria-describedby="basic-addon1">
         </div>
         <div class="input-group">
             <span class="input-group-text">content</span>
-            <textarea name="content" class="form-control" aria-label="With textarea" placeholder="댓글을 입력해주세요.."></textarea>
+            <textarea name="content" class="form-control" aria-label="With textarea"
+                      placeholder="댓글을 입력해주세요.."></textarea>
         </div>
         <br/>
         <input type="text" name="id" th:value="${post.id}" th:hidden="true">
@@ -57,25 +69,45 @@
         </div>
     </form>
 
-<!--    <div class="card">-->
-<!--        <div class="card-body">-->
-<!--            <div class="input-group mb-3" >-->
-<!--                <form id="comment" th:action="@{/post/{identity}/save-comment (identity=${post.id})}" method="post" >-->
-<!--                            <div class="input-group mb-3">-->
-<!--                                <span class="input-group-text" id="basic-addon1">@</span>-->
-<!--                                <input type="text" name="commenter" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">-->
-<!--                            </div>-->
-<!--&lt;!&ndash;                    <input type="text" name="commenter" class="form-control" placeholder="너의 이름은?" >&ndash;&gt;-->
-<!--                    <input type="text" name="content" class="form-control" placeholder="댓글을 입력해주세요.." >-->
-<!--                    <input type="text" name="id" th:value="${post.id}" th:hidden="true">-->
-<!--                    <div class="input-group-append">-->
-<!--                        <button class="btn btn-outline-secondary" type="submit">등록</button>-->
-<!--                    </div>-->
-<!--                </form>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+    <!--    <div class="card">-->
+    <!--        <div class="card-body">-->
+    <!--            <div class="input-group mb-3" >-->
+    <!--                <form id="comment" th:action="@{/post/{identity}/save-comment (identity=${post.id})}" method="post" >-->
+    <!--                            <div class="input-group mb-3">-->
+    <!--                                <span class="input-group-text" id="basic-addon1">@</span>-->
+    <!--                                <input type="text" name="commenter" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">-->
+    <!--                            </div>-->
+    <!--&lt;!&ndash;                    <input type="text" name="commenter" class="form-control" placeholder="너의 이름은?" >&ndash;&gt;-->
+    <!--                    <input type="text" name="content" class="form-control" placeholder="댓글을 입력해주세요.." >-->
+    <!--                    <input type="text" name="id" th:value="${post.id}" th:hidden="true">-->
+    <!--                    <div class="input-group-append">-->
+    <!--                        <button class="btn btn-outline-secondary" type="submit">등록</button>-->
+    <!--                    </div>-->
+    <!--                </form>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </div>-->
 
+</div>
+<div class="container" th:each="comment : ${comments}">
+    <div class="card py-5" style="width: 25rem;">
+        <div class="card card-body" style="width: 25rem;">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">[[${comment.comment}]]</li>
+            </ul>
+            <div class="card-footer">
+                <p class="card-text">@ [[${comment.author}]]</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="input-group-append">
+        <form th:action="@{/post/remove-comment}" method="post">
+            <input type="text" name="postId" th:value="${post.id}" th:hidden="true"/>
+            <input type="text" name="commentId" th:value="${comment.id}" th:hidden="true"/>
+            <button class="btn btn-primary">삭제</button>
+        </form>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
