--- a/src/main/resources/templates/post_update_form.html
+++ b/src/main/resources/templates/post_update_form.html
@@ -2,8 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/post/">snsX</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/post/upload}">게시글 작성하기</a>
+                </li>
+            </ul>
+            <form class="d-flex" th:action="@{/post/search}">
+                <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="btn btn-outline-success" type="submit" th:value="Search"/>
+            </form>
+        </div>
+    </div>
+</nav>
 
 <div class="container">
 
@@ -16,20 +38,22 @@
     <form th:action="@{/post/update}" method="post">
 
         <img th:each="imageFile : ${post.images}" th:src="|/post/images/${imageFile}|" width="300" height="300"/>
-
         <input type="text" name="prevContent" th:value="${post.content} " th:hidden="true">
         <input type="text" name="postId" th:value="${post.id} " th:hidden="true">
-        <input type="text" name="author" th:value="${post.author}" th:hidden="true">
-        <div class="mb-3">
-            <label for="content" class="form-label">내용</label>
-            <input type="text" class="form-control" id="content" name="postContent" th:placeholder="${post.content}">
+        <br/>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">@</span>
+            <input type="text" name="author" th:value="${post.author}" readonly>
         </div>
+        <input type="text" class="form-control" id="content" name="postContent" th:placeholder="${post.content}">
         <div class="col-12">
             <a href="/" role="button" class="btn btn-secondary">수정 취소</a>
             <button type="submit"  class="btn btn-primary">수정 완료</button>
         </div>
     </form>
-
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
