--- a/src/main/resources/templates/post_form.html
+++ b/src/main/resources/templates/post_form.html
@@ -20,7 +20,7 @@
             </ul>
             <form class="d-flex" th:action="@{/post/search}">
                 <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <input class="btn btn-outline-success" type="submit">Search</input>
+                <input class="btn btn-outline-success" type="submit" th:value="Search"/>
             </form>
         </div>
     </div>
