nan으로 나오는 이슈 해결

--- a/src/main/resources/templates/post_feed_list.html
+++ b/src/main/resources/templates/post_feed_list.html
@@ -159,7 +159,7 @@
                         fig.appendChild(fc);
                         main.appendChild(fig);
                     });
-                    if (data.length === 0) {
+                    if (data.posts.length === 0) {
                         isEnd = true;
                     }
                     offset += data.posts.length;
