--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
+    <title>Hello</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         .container {
             max-width: 560px;
@@ -13,7 +16,26 @@
     </style>
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/post/">snsX</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/post/upload}">게시글 작성하기</a>
+                </li>
+            </ul>
+            <form class="d-flex" th:action="@{/post/search}">
+                <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="btn btn-outline-success" type="submit"th:value="Search"/>
+            </form>
+        </div>
+    </div>
+</nav>
 <div class="container">
 
     <div class="py-5 text-center">
@@ -30,7 +52,7 @@
         </div>
 
         <div>
-            <label for="loginId">로그인 nickName</label>
+            <label for="loginId">닉네임</label>
             <input type="text" id="loginId" th:field="*{nickName}" class="form-control"
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{nickName}" />
@@ -62,12 +84,6 @@
         <div class="row">
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg" type="submit">회원가입</button>
-            </div>
-            <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='items.html'"
-                        th:onclick="|location.href='@{/}'|"
-                        type="button">취소</button>
             </div>
         </div>
 
