--- a/src/main/resources/templates/tag_feed_form.html
+++ b/src/main/resources/templates/tag_feed_form.html
@@ -113,7 +113,7 @@
 
 <script th:inline="javascript">
     let URL =
-        "http://localhost:8080/post/search/" +[[${tag}]];
+        "http://localhost:8080/post/search/" +[[${tag.tagId}]];
     document.addEventListener("DOMContentLoaded", () => {
         //set up the IntersectionObserver to load more images if the footer is visible.
         let options = {
