#42 쿠키 받아오는 것은 됨.post /login시 에러 남

--- a/src/main/resources/templates/post_feed_list.html
+++ b/src/main/resources/templates/post_feed_list.html
@@ -74,9 +74,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/post/upload">게시글 작성하기</a>
                     </li>
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#">Link</a>-->
-<!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">[[${member.nickName}]]</a>
+                    </li>
 <!--                    <li class="nav-item dropdown">-->
 <!--                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
 <!--                            Dropdown-->
