--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -2,8 +2,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
     <style>
         .container {
             max-width: 560px;
@@ -22,32 +20,21 @@
         <h2>로그인</h2>
     </div>
 
-    <form action="item.html" th:action th:object="${loginForm}" method="post">
+    <form  th:action="@{/member/login}" th:object="${member}" method="post">
 
-        <div th:if="${#fields.hasGlobalErrors()}">
-            <p class="field-error" th:each="err : ${#fields.globalErrors()}"
-               th:text="${err}">전체 오류 메시지</p>
-        </div>
 
         <div>
             <label for="loginId">로그인 ID</label>
 
-            <input type="text" id="loginId" th:field="*{loginId}" class="form-
-control"
-
+            <input type="text" id="loginId" th:field="*{email}" class="form-control"
                    th:errorclass="field-error">
-            <div class="field-error" th:errors="*{loginId}" />
         </div>
         <div>
             <label for="pw">비밀번호</label>
             <input type="pw" id="pw" th:field="*{pw}"
-                   class="form-control"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{pw}" />
+                   class="form-control">
         </div>
-
         <hr class="my-4">
-
         <div class="row">
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg" type="submit">
@@ -55,9 +42,7 @@ control"
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='items.html'"
-
-                        th:onclick="|location.href='@{/}'|"
+                        th:onclick="|location.href='@{/member/login}'|"
                         type="button">취소</button>
             </div>
         </div>
