--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -21,32 +21,26 @@
     </div>
 
     <form  th:action="@{/member/login}" th:object="${member}" method="post">
-
-
         <div>
-            <label for="loginId">로그인 ID</label>
+            <label for="loginId">로그인 email</label>
 
             <input type="text" id="loginId" th:field="*{email}" class="form-control"
                    th:errorclass="field-error">
         </div>
         <div>
             <label for="pw">비밀번호</label>
-            <input type="pw" id="pw" th:field="*{pw}"
-                   class="form-control">
+            <input type="password" id="pw" th:field="*{pw}" class="form-control">
         </div>
         <hr class="my-4">
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">
-                    로그인</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
             </div>
             <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        th:onclick="|location.href='@{/member/login}'|"
+                <button class="w-100 btn btn-secondary btn-lg" th:onclick="|location.href='@{/member/login}'|"
                         type="button">취소</button>
             </div>
         </div>
-
     </form>
 
 </div> <!-- /container -->
