--- a/src/main/resources/templates/member_feed_form.html
+++ b/src/main/resources/templates/member_feed_form.html
@@ -92,6 +92,15 @@
                     <!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
                     <!--                    </li>-->
                 </ul>
+                <div class="col">
+                    <form th:action="@{/member/logout}" method="post">
+                        <button class="w-100 btn btn-dark btn-lg"
+                                onclick="location.href='items.html'" type="submit">
+                            로그아웃
+                        </button>
+                    </form>
+
+                </div>
                 <form class="d-flex" th:action="@{/post/search}">
                     <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <input class="btn btn-outline-success" type="submit"th:value="Search"/>
