--- a/src/main/resources/templates/member_feed_form.html
+++ b/src/main/resources/templates/member_feed_form.html
@@ -75,7 +75,7 @@
                         <a class="nav-link active" aria-current="page" href="/post/upload">게시글 작성하기</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">[[${member.nickName}]]</a>
+                        <a class="nav-link" href="/member/setting">[[${member.nickName}]]</a>
                     </li>
                     <!--                    <li class="nav-item dropdown">-->
                     <!--                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
@@ -94,12 +94,11 @@
                 </ul>
                 <div class="col">
                     <form th:action="@{/member/logout}" method="post">
-                        <button class="w-100 btn btn-dark btn-lg"
+                        <button class="w-100 btn btn-lg"
                                 onclick="location.href='items.html'" type="submit">
                             로그아웃
                         </button>
                     </form>
-
                 </div>
                 <form class="d-flex" th:action="@{/post/search}">
                     <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
