--- a/src/main/resources/templates/post_form.html
+++ b/src/main/resources/templates/post_form.html
@@ -27,10 +27,8 @@
 </nav>
 <div class="container">
     <div class="py-5 text-center">
-        <h2>상품 등록 폼</h2>
+        <h2>게시글 등록 폼</h2>
     </div>
-    <h4 class="mb-3">상품 입력</h4>
-
     <form th:action="@{/post/upload}" method="post" enctype="multipart/form-data">
         <div class="input-group">
             <span class="input-group-text">content</span>
