#42 로그인 성공 후 로그인 페이지 이전으로 돌아가기 성공

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -58,7 +58,7 @@
         <h2>로그인</h2>
     </div>
 
-    <form  th:action="@{/member/login}" th:object="${member}" method="post">
+    <form th:object="${member}" method="post">
         <div>
             <label for="loginId">email</label>
 
