--- a/src/main/resources/templates/setting.html
+++ b/src/main/resources/templates/setting.html
@@ -58,7 +58,7 @@
         <h2>설정</h2>
     </div>
     <div class="col">
-        <a class="nav-link active" aria-current="page" href="/post/upload">회원 탈퇴하기</a>
+        <a class="nav-link active" aria-current="page" href="/member/withdraw">회원 탈퇴하기</a>
     </div>
 <!--    <div class="col">-->
 <!--        <form th:action="@{/member/withdraw}" method="post">-->
