--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
             max-width: 560px;
         }
         .field-error {
-            border-color: #dc3545;
+            border-color: #000000;
             color: #dc3545;
         }
     </style>
