--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -40,6 +40,10 @@
                 <button class="w-100 btn btn-secondary btn-lg" th:onclick="|location.href='@{/member/login}'|"
                         type="button">취소</button>
             </div>
+            <div class="col">
+                <button class="w-100 btn btn-secondary btn-lg" th:onclick="|location.href='@{/member/searchLostMemberEmail}'|"
+                        type="button">ID찾기</button>
+            </div>
         </div>
     </form>
 
