--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -44,6 +44,10 @@
                 <button class="w-100 btn btn-secondary btn-lg" th:onclick="|location.href='@{/member/searchLostMemberEmail}'|"
                         type="button">ID찾기</button>
             </div>
+            <div class="col">
+                <button class="w-100 btn btn-secondary btn-lg" th:onclick="|location.href='@{/member/searchLostMemberPw}'|"
+                        type="button">PW찾기</button>
+            </div>
         </div>
     </form>
 
