#38 #69 add add searchByTagForm & homeController, update memberService & memberRepository & postController & memberController

--- a/src/main/resources/templates/post_feed_list.html
+++ b/src/main/resources/templates/post_feed_list.html
@@ -71,12 +71,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/post/upload">게시글 작성하기</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">[[${member.nickName}]]</a>
-                    </li>
 <!--                    <li class="nav-item dropdown">-->
 <!--                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
 <!--                            Dropdown-->
@@ -92,8 +86,8 @@
 <!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
 <!--                    </li>-->
                 </ul>
-                <form class="d-flex" th:action="@{/post/search}">
-                    <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" th:action="@{/search}">
+                    <input name="searchWord" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <input class="btn btn-outline-success" type="submit"th:value="Search"/>
                 </form>
             </div>
