--- a/src/main/resources/templates/member_feed_form.html
+++ b/src/main/resources/templates/member_feed_form.html
@@ -92,7 +92,7 @@
                     <!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
                     <!--                    </li>-->
                 </ul>
-                <form class="d-flex" th:action="@{/post/search}">
+                <form class="d-flex" th:action="@{search}">
                     <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <input class="btn btn-outline-success" type="submit"th:value="Search"/>
                 </form>
