--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -79,6 +79,14 @@
                         type="button">회원가입</button>
             </div>
             <div class="col">
+                <button class="w-100 btn btn-secondary btn-lg" th:onclick="|location.href='@{/member/searchLostMemberEmail}'|"
+                        type="button">ID찾기</button>
+            </div>
+            <div class="col">
+                <button class="w-100 btn btn-secondary btn-lg" th:onclick="|location.href='@{/member/searchLostMemberPw}'|"
+                        type="button">PW찾기</button>
+            </div>
+            <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg" th:onclick="|location.href='@{/member/login}'|"
                         type="button">취소</button>
             </div>
