#66 comment add 성공 #46 회원 탈퇴시 post, comment삭제 성공 회원가입 없이 commentadd시도하면 login페이지로 리다이랙션 되는데 로그인 후 해당 요청을 처리하는 쿼리가 get으로 요청이 날아가는 이슈가 있음.

--- a/src/main/resources/templates/post_result.html
+++ b/src/main/resources/templates/post_result.html
@@ -52,11 +52,6 @@
 
 <div class="container">
     <form id="comment" th:action="@{/post/{identity}/save-comment (identity=${post.postId})}" method="post">
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">@</span>
-            <input type="text" name="commenter" class="form-control" placeholder="Username" aria-label="Username"
-                   aria-describedby="basic-addon1">
-        </div>
         <div class="input-group">
             <span class="input-group-text">content</span>
             <textarea name="content" class="form-control" aria-label="With textarea"
@@ -96,7 +91,7 @@
                 <li class="list-group-item">[[${comment.comment}]]</li>
             </ul>
             <div class="card-footer">
-                <p class="card-text">@ [[${comment.author}]]</p>
+                <p class="card-text">@ [[${comment.user.nickName}]]</p>
             </div>
         </div>
     </div>
