--- a/src/main/resources/templates/post_feed_list.html
+++ b/src/main/resources/templates/post_feed_list.html
@@ -138,25 +138,24 @@
             fetch(URL)
                 .then(response => response.json())
                 .then(data => {
-                    // data.items[].img, data.items[].name
-                    data.posts.forEach(item => {
+                    data.forEach(item => {
                         let fig = document.createElement("figure");
                         let fc = document.createElement("figcaption");
                         let img = document.createElement("img");
                         let link=document.createElement("a");
-                        link.href = "http://localhost:8080/post/" + item.id;
-                        img.src = item.img;
-                        img.alt = item.author;
+                        link.href = "http://localhost:8080/post/" + item.postId;
+                        img.src = "http://localhost:8080/post/images/" + item.thumbnailFileName;
+                        img.alt = item.postId;
                         fc.textContent = item.content;
                         link.appendChild(img);
                         fig.appendChild(link);
                         fig.appendChild(fc);
                         main.appendChild(fig);
                     });
-                    if (data.posts.length === 0) {
+                    if (data.length === 0) {
                         isEnd = true;
                     }
-                    offset += data.posts.length;
+                    offset += data.length;
                 });
         }
     }
