--- a/src/main/resources/templates/tag_feed_form.html
+++ b/src/main/resources/templates/tag_feed_form.html
@@ -128,7 +128,7 @@
         observer.observe(document.querySelector("footer"));
         //an initial load of some data
 
-        getData();
+        //getData();
     });
     function handleIntersect(entries) {
         if (entries[0].isIntersecting) {
