#68 #69 fix html searchByTag err, add member_tag_feed_form.html

--- a/src/main/resources/templates/member_feed_form.html
+++ b/src/main/resources/templates/member_feed_form.html
@@ -100,8 +100,8 @@
                         </button>
                     </form>
                 </div>
-                <form class="d-flex" th:action="@{search}">
-                    <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" th:action="@{/search}">
+                    <input name="searchWord" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <input class="btn btn-outline-success" type="submit"th:value="Search"/>
                 </form>
             </div>
