--- a/src/main/resources/templates/member_tag_feed_form.html
+++ b/src/main/resources/templates/member_tag_feed_form.html
@@ -71,6 +71,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" th:href="@{/post/upload}">게시글 작성하기</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/member/setting">[[${member.nickName}]]</a>
+                    </li>
                     <!--                    <li class="nav-item">-->
                     <!--                        <a class="nav-link" href="#">Link</a>-->
                     <!--                    </li>-->
@@ -89,6 +95,14 @@
                     <!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
                     <!--                    </li>-->
                 </ul>
+                <div class="col">
+                    <form th:action="@{/member/logout}" method="post">
+                        <button class="w-100 btn btn-lg"
+                                onclick="location.href='items.html'" type="submit">
+                            로그아웃
+                        </button>
+                    </form>
+                </div>
                 <form class="d-flex" th:action="@{/search}">
                     <input name="searchWord" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <input class="btn btn-outline-success" type="submit" th:value="Search"/>
