--- a/src/main/resources/templates/pw_verify.html
+++ b/src/main/resources/templates/pw_verify.html
@@ -44,8 +44,8 @@
                     <!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
                     <!--                    </li>-->
                 </ul>
-                <form class="d-flex" th:action="@{/post/search}">
-                    <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" th:action="@{/search}">
+                    <input name="searchWord" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <input class="btn btn-outline-success" type="submit"th:value="Search"/>
                 </form>
             </div>
@@ -53,7 +53,7 @@
     </nav>
 </header>
 <div class="container">
-    <form  th:action="@{/member/withdraw}" method="post">
+    <form  th:action="@{/member/{path} (path=${path})}" method="post">
         <div>
             <label for="pw">비밀번호</label>
             <input type="password" id="pw" name="password" class="form-control">
@@ -61,7 +61,7 @@
         <hr class="my-4">
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">회원 탈퇴하기</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">입력완료</button>
             </div>
         </div>
     </form>
