--- a/src/main/resources/templates/post_update_form.html
+++ b/src/main/resources/templates/post_update_form.html
@@ -32,19 +32,12 @@
     <div class="py-5 text-center">
         <h2>게시글 수정</h2>
     </div>
-
-    <h4 class="mb-3">상품 입력</h4>
-
     <form th:action="@{/post/update}" method="post">
 
         <img th:each="imageFile : ${post.images}" th:src="|/post/images/${imageFile}|" width="300" height="300"/>
-        <input type="text" name="prevContent" th:value="${post.content} " th:hidden="true">
-        <input type="text" name="postId" th:value="${post.id} " th:hidden="true">
+        <input type="text" name="postId" th:value="${post.postId} " th:hidden="true">
         <br/>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">@</span>
-            <input type="text" name="author" th:value="${post.author}" readonly>
-        </div>
+
         <input type="text" class="form-control" id="content" name="postContent" th:placeholder="${post.content}">
         <div class="col-12">
             <a href="/" role="button" class="btn btn-secondary">수정 취소</a>
