--- a/src/main/resources/templates/member_feed_form.html
+++ b/src/main/resources/templates/member_feed_form.html
@@ -62,58 +62,11 @@
     </style>
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/post/">snsX</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/post/upload">게시글 작성하기</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/member/setting">[[${member.nickName}]]</a>
-                    </li>
-                    <!--                    <li class="nav-item dropdown">-->
-                    <!--                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-                    <!--                            Dropdown-->
-                    <!--                        </a>-->
-                    <!--                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-                    <!--                            <li><a class="dropdown-item" href="#">Action</a></li>-->
-                    <!--                            <li><a class="dropdown-item" href="#">Another action</a></li>-->
-                    <!--                            <li><hr class="dropdown-divider"></li>-->
-                    <!--                            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-                    <!--                        </ul>-->
-                    <!--                    </li>-->
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-                    <!--                    </li>-->
-                </ul>
-                <div class="col">
-                    <form th:action="@{/member/logout}" method="post">
-                        <button class="w-100 btn btn-lg"
-                                onclick="location.href='items.html'" type="submit">
-                            로그아웃
-                        </button>
-                    </form>
-                </div>
-                <form class="d-flex" th:action="@{/search}">
-                    <input name="searchWord" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <input class="btn btn-outline-success" type="submit"th:value="Search"/>
-                </form>
-            </div>
-        </div>
-    </nav>
-</header>
+<div th:insert="~{/header :: headerFragment}"></div>
 <main>
     <!-- images will be loaded here with figure and figcaption -->
 </main>
-<footer>
-    <p>The Footer. &copy; 2022 snsX.</p>
-</footer>
+<div th:insert="~{/footer :: footerFragment}"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
