--- a/src/main/resources/templates/member_page_form.html
+++ b/src/main/resources/templates/member_page_form.html
@@ -6,10 +6,11 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+<div th:insert="~{/header :: headerFragment}"></div>
 <div class="container">
     <p th:text="${member.nickName}"></p>
     <p th:text="${member.profileImage}"></p>
 </div>
-
+<div th:insert="~{/footer :: footerFragment}"></div>
 </body>
 </html>
