--- a/src/main/resources/templates/post_result.html
+++ b/src/main/resources/templates/post_result.html
@@ -7,26 +7,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/post/">snsX</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/post/upload}">게시글 작성하기</a>
-                </li>
-            </ul>
-            <form class="d-flex" th:action="@{/post/search}">
-                <input name="tag" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <input class="btn btn-outline-success" type="submit"th:value="Search"/>
-            </form>
-        </div>
-    </div>
-</nav>
+<div th:insert="~{/header :: headerFragment}"></div>
 <div class="container" th:object="${post}">
     <div class="card py-5" style="width: 25rem;">
         <img class="rounded card-img-top" th:each="imageFile : ${post.images}" th:src="|/post/images/${imageFile}|"
@@ -104,6 +85,7 @@
         </form>
     </div>
 </div>
+<div th:insert="~{/footer :: footerFragment}"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
