--- a/src/main/resources/templates/search_lost_form.html
+++ b/src/main/resources/templates/search_lost_form.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-
+<div th:insert="~{/header :: headerFragment}"></div>
 <div class="container">
 
     <div class="py-5 text-center">
@@ -27,5 +27,6 @@
         <button class="w-100 btn btn-primary btn-lg" type="submit">로그인하기</button>
     </form>
 </div> <!-- /container -->
+<div th:insert="~{/footer :: footerFragment}"></div>
 </body>
 </html>
